--- a/index.html
+++ b/index.html
@@ -18,16 +18,34 @@
                     <img alt="potatoSteak" id="potatoSteak" src="./assets/potatoSteak.png">
                     <h1>Bife com batata</h1>
                     <h1 class="inlinecontainertext">R$ 29,99</h1>
+                    <div class="quantity buttons_added">
+                        <input type="button" value="-" class="minus">
+                        <input type="number" step="1" min="0" max="" id="1" name="quantity" value="0" title="Qty"
+                            class="text" size="4" pattern="" inputmode="">
+                        <input type="button" value="+" class="plus">
+                    </div>
                 </div>
                 <div class="inlinecontainer">
                     <img alt="chickenThigh" id="chickenThigh" src="./assets/chickenThigh.png">
                     <h1>Coxa de Frango Crocante</h1>
                     <h1 class="inlinecontainertext">R$ 24,99</h1>
+                    <div class="quantity buttons_added">
+                        <input type="button" value="-" class="minus">
+                        <input type="number" step="1" min="0" max="" id="1" name="quantity" value="0" title="Qty"
+                            class="text" size="4" pattern="" inputmode="">
+                        <input type="button" value="+" class="plus">
+                    </div>
                 </div>
                 <div class="inlinecontainer">
                     <img alt="potRost" id="potRost" src="./assets/potRost.png">
                     <h1>Carne de Panela</h1>
                     <h1 class="inlinecontainertext">R$ 21,99</h1>
+                    <div class="quantity buttons_added">
+                        <input type="button" value="-" class="minus">
+                        <input type="number" step="1" min="0" max="" id="1" name="quantity" value="0" title="Qty"
+                            class="text" size="4" pattern="" inputmode="">
+                        <input type="button" value="+" class="plus">
+                    </div>
                 </div>
             </div>
         </div>
@@ -38,16 +56,34 @@
                     <img alt="farofa" id="farofa" src="./assets/farofa.png">
                     <h1>Farofa</h1>
                     <h1 class="inlinecontainertext">R$ 9,99</h1>
+                    <div class="quantity buttons_added">
+                        <input type="button" value="-" class="minus">
+                        <input type="number" step="1" min="0" max="" id="1" name="quantity" value="0" title="Qty"
+                            class="text" size="4" pattern="" inputmode="">
+                        <input type="button" value="+" class="plus">
+                    </div>
                 </div>
                 <div class="inlinecontainer">
                     <img alt="salad" id="salad" src="./assets/salad.png">
                     <h1>Salada</h1>
                     <h1 class="inlinecontainertext">R$ 7,99</h1>
+                    <div class="quantity buttons_added">
+                        <input type="button" value="-" class="minus">
+                        <input type="number" step="1" min="0" max="" id="1" name="quantity" value="0" title="Qty"
+                            class="text" size="4" pattern="" inputmode="">
+                        <input type="button" value="+" class="plus">
+                    </div>
                 </div>
                 <div class="inlinecontainer">
                     <img alt="crackling" id="crackling" src="./assets/crackling.png">
                     <h1>Torresmo</h1>
                     <h1 class="inlinecontainertext">R$ 11,99</h1>
+                    <div class="quantity buttons_added">
+                        <input type="button" value="-" class="minus">
+                        <input type="number" step="1" min="0" max="" id="1" name="quantity" value="0" title="Qty"
+                            class="text" size="4" pattern="" inputmode="">
+                        <input type="button" value="+" class="plus">
+                    </div>
                 </div>
             </div>
         </div>
@@ -59,5 +95,9 @@
         </div>
         <button class="endbutton">Calcular</button>
     </div>
+
+    <script src="jquery-3.6.0.min.js"> </script>
+    <script src="quantity.js"> </script>
+    
 </body>
 </html>
