--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
                 <div class="inlinecontainer">
                     <img alt="potatoSteak" id="potatoSteak" src="./assets/potatoSteak.png">
                     <h1>Bife com Batata</h1>
-                    <h1 class="inlinecontainertext">R$ 29,99</h1>
+                    <h1 class="inlinecontainertext">R$ 30,00</h1>
                     <div class="quantity buttons_added">
                         <input type="button" value="-" class="minus">
                         <input type="number" step="1" min="0" max="" id="1" name="quantity" value="0" title="Qty"
@@ -28,7 +28,7 @@
                 <div class="inlinecontainer">
                     <img alt="chickenThigh" id="chickenThigh" src="./assets/chickenThigh.png">
                     <h1>Coxa de Frango Crocante</h1>
-                    <h1 class="inlinecontainertext">R$ 24,99</h1>
+                    <h1 class="inlinecontainertext">R$ 25,00</h1>
                     <div class="quantity buttons_added">
                         <input type="button" value="-" class="minus">
                         <input type="number" step="1" min="0" max="" id="2" name="quantity" value="0" title="Qty"
@@ -39,7 +39,7 @@
                 <div class="inlinecontainer">
                     <img alt="potRost" id="potRost" src="./assets/potRost.png">
                     <h1>Carne de Panela</h1>
-                    <h1 class="inlinecontainertext">R$ 21,99</h1>
+                    <h1 class="inlinecontainertext">R$ 22,00</h1>
                     <div class="quantity buttons_added">
                         <input type="button" value="-" class="minus">
                         <input type="number" step="1" min="0" max="" id="3" name="quantity" value="0" title="Qty"
@@ -55,7 +55,7 @@
                 <div class="inlinecontainer">
                     <img alt="farofa" id="farofa" src="./assets/farofa.png">
                     <h1>Farofa</h1>
-                    <h1 class="inlinecontainertext">R$ 9,99</h1>
+                    <h1 class="inlinecontainertext">R$ 10,00</h1>
                     <div class="quantity buttons_added">
                         <input type="button" value="-" class="minus">
                         <input type="number" step="1" min="0" max="" id="4" name="quantity" value="0" title="Qty"
@@ -66,7 +66,7 @@
                 <div class="inlinecontainer">
                     <img alt="salad" id="salad" src="./assets/salad.png">
                     <h1>Salada</h1>
-                    <h1 class="inlinecontainertext">R$ 7,99</h1>
+                    <h1 class="inlinecontainertext">R$ 8,00</h1>
                     <div class="quantity buttons_added">
                         <input type="button" value="-" class="minus">
                         <input type="number" step="1" min="0" max="" id="5" name="quantity" value="0" title="Qty"
@@ -77,7 +77,7 @@
                 <div class="inlinecontainer">
                     <img alt="crackling" id="crackling" src="./assets/crackling.png">
                     <h1>Torresmo</h1>
-                    <h1 class="inlinecontainertext">R$ 11,99</h1>
+                    <h1 class="inlinecontainertext">R$ 12,00</h1>
                     <div class="quantity buttons_added">
                         <input type="button" value="-" class="minus">
                         <input type="number" step="1" min="0" max="" id="6" name="quantity" value="0" title="Qty"
@@ -101,6 +101,8 @@
         <div id="saida2">
         </div>
         <div id="fim">
+        </div>
+        <div id="calculo">
         </div>
     </div>
 
