--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <div class="container">
         <img class="mainimage" alt="foods" id="foods" src="./assets/foods.png">
         <h1>Menu - Faça A Sua Escolha</h1>
-        <div class="container2e3">
+        <div class="container1and2">
             <h1><br>Prato Principal<br>Todos os pratos acompanham arroz, feijão e a sobremesa do dia.</h1>
             <div class="inline">
                 <div class="inlinecontainer">
@@ -20,8 +20,7 @@
                     <h1 class="inlinecontainertext">R$ 30,00</h1>
                     <div class="quantity buttons_added">
                         <input type="button" value="-" class="minus">
-                        <input type="number" step="1" min="0" max="" id="1" name="quantity" value="0" title="Qty"
-                            class="input-text qty text" size="4" pattern="" inputmode="">
+                        <input type="number" step="1" min="0" max="" id="1" name="quantity" value="0" title="Qty" class="input-text qty text" size="4" pattern="" inputmode="">
                         <input type="button" value="+" class="plus">
                     </div>
                 </div>
@@ -31,8 +30,7 @@
                     <h1 class="inlinecontainertext">R$ 25,00</h1>
                     <div class="quantity buttons_added">
                         <input type="button" value="-" class="minus">
-                        <input type="number" step="1" min="0" max="" id="2" name="quantity" value="0" title="Qty"
-                            class="input-text qty text" size="4" pattern="" inputmode="">
+                        <input type="number" step="1" min="0" max="" id="2" name="quantity" value="0" title="Qty" class="input-text qty text" size="4" pattern="" inputmode="">
                         <input type="button" value="+" class="plus">
                     </div>
                 </div>
@@ -42,14 +40,13 @@
                     <h1 class="inlinecontainertext">R$ 22,00</h1>
                     <div class="quantity buttons_added">
                         <input type="button" value="-" class="minus">
-                        <input type="number" step="1" min="0" max="" id="3" name="quantity" value="0" title="Qty"
-                            class="input-text qty text" size="4" pattern="" inputmode="">
+                        <input type="number" step="1" min="0" max="" id="3" name="quantity" value="0" title="Qty" class="input-text qty text" size="4" pattern="" inputmode="">
                         <input type="button" value="+" class="plus">
                     </div>
                 </div>
             </div>
         </div>
-        <div class="container2e3">
+        <div class="container1and2">
             <h1><br>Acompanhamentos<br>Porções para uma pessoa</h1>
             <div class="inline">
                 <div class="inlinecontainer">
@@ -58,8 +55,7 @@
                     <h1 class="inlinecontainertext">R$ 10,00</h1>
                     <div class="quantity buttons_added">
                         <input type="button" value="-" class="minus">
-                        <input type="number" step="1" min="0" max="" id="4" name="quantity" value="0" title="Qty"
-                            class="input-text qty text" size="4" pattern="" inputmode="">
+                        <input type="number" step="1" min="0" max="" id="4" name="quantity" value="0" title="Qty" class="input-text qty text" size="4" pattern="" inputmode="">
                         <input type="button" value="+" class="plus">
                     </div>
                 </div>
@@ -69,8 +65,7 @@
                     <h1 class="inlinecontainertext">R$ 8,00</h1>
                     <div class="quantity buttons_added">
                         <input type="button" value="-" class="minus">
-                        <input type="number" step="1" min="0" max="" id="5" name="quantity" value="0" title="Qty"
-                            class="input-text qty text" size="4" pattern="" inputmode="">
+                        <input type="number" step="1" min="0" max="" id="5" name="quantity" value="0" title="Qty" class="input-text qty text" size="4" pattern="" inputmode="">
                         <input type="button" value="+" class="plus">
                     </div>
                 </div>
@@ -80,29 +75,26 @@
                     <h1 class="inlinecontainertext">R$ 12,00</h1>
                     <div class="quantity buttons_added">
                         <input type="button" value="-" class="minus">
-                        <input type="number" step="1" min="0" max="" id="6" name="quantity" value="0" title="Qty"
-                            class="input-text qty text" size="4" pattern="" inputmode="">
+                        <input type="number" step="1" min="0" max="" id="6" name="quantity" value="0" title="Qty" class="input-text qty text" size="4" pattern="" inputmode="">
                         <input type="button" value="+" class="plus">
                     </div>
                 </div>
             </div>
         </div>
-        <div class="container4">
+        <div class="container3">
             <h1><br>Dados Pessoais</h1>
             <input class="inputUser" id="name" name="name" placeholder="Digite o seu nome" type="text">
             <input class="inputUser" id="phone" name="phone" placeholder="Digite o seu telefone" type="text">
             <input class="inputUser" id="email" name="email" placeholder="Digite o seu email" type="text">
         </div>
         <button class="endbutton" onclick="calc()">Calcular</button>
-        <div id="inicio">
+        <div id="exit">
         </div>
-        <div id="saida">
+        <div id="exit1">
         </div>
-        <div id="saida2">
+        <div id="end">
         </div>
-        <div id="fim">
-        </div>
-        <div id="calculo">
+        <div id="calculation">
         </div>
     </div>
 
